Minor alignment fixes

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html, body{
     margin: 0;
     width: 100%;
@@ -20,7 +24,6 @@ html, body{
     display: flex;
     height: 10%;
     width: 100%;
-    /*background-color: #000000;*/
     color: #f0f0f0;
     border: 5px #9B1D3B;
     cursor: pointer;
@@ -55,7 +58,17 @@ html, body{
 .mainInfo{
     width: 100%;
     margin: .5%;
-    padding-left: 2%;
+    padding-left: 1%;
+    padding-right: 2%;
+    padding-bottom: 5px;
+    background-color: #f0f0f0;
+    border-radius: 10px;
+}
+
+.projectInfo{
+    width: 99%;
+    margin: .5%;
+    padding-left: 1%;
     padding-right: 2%;
     padding-bottom: 5px;
     background-color: #f0f0f0;
